fixed line spacing

--- a/index.css
+++ b/index.css
@@ -5,6 +5,11 @@ body {
   color: white
 }
 
+h1 {
+  line-height: 100%;
+  margin-bottom: 2vh;
+}
+
 .split-pane-container {
   width: 100vw;
   height: 100vh;
